data/issues_nolabel/nolabel_test_13926.txt
Build from source issue (CUDA 7.5)

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): Linux Ubuntu 14.04
TensorFlow installed from (source or binary): source
TensorFlow version (use command below): 1.4 RC0
Python version: 3.4.3
Bazel version (if compiling from source): 0.7
CUDA/cuDNN version: CUDA7.5 , cudnn v5.1
GPU model and memory: GeForce GTX TITAN
Exact command to reproduce: bazel build --config opt --config=cuda //tensorflow/tools/pip_package:build_pip_package

Describe the problem
I am trying to build tensorflow 1.4 RC0 from source, getting compilation error that 'cusolverEigMode_t' has not been declared.
Looks like this is the commit where this code was added:
e3413de#diff-e4b1fa736000720d06dab76006540ec4R467
I tried grepping for cusolverEigMode_tin my /usr/local/cuda/ but could not find any reference, is it possible that cusolverEigMode_t is not supported in CUDA 7.5?
In that case, it should be noted that 1.4 is only supported for CUDA 8.0 and above
Source code / logs
ERROR: /home/xxxxx/downloads/tensorflow/tensorflow/core/kernels/BUILD:839:1: C++ compilation of rule '//tensorflow/core/kernels:where_op' failed (Exit 1).
In file included from tensorflow/core/kernels/where_op.cc:42:0:
./tensorflow/core/kernels/cuda_solvers.h:299:16: error: 'cusolverEigMode_t' has not been declared
   Status Heevd(cusolverEigMode_t jobz, cublasFillMode_t uplo, int n,
                ^
Target //tensorflow/tools/pip_package:build_pip_package failed to build